@@ -1,9 +1,9 @@
 package be.vlaanderen.informatievlaanderen.ldes.ldi;
 
-import org.apache.jena.rdf.model.Model;
-import org.apache.jena.rdf.model.Property;
-import org.apache.jena.rdf.model.RDFNode;
-import org.apache.jena.rdf.model.Resource;
+import be.vlaanderen.informatievlaanderen.ldes.ldi.valueobjects.GeoType;
+import org.apache.jena.datatypes.RDFDatatype;
+import org.apache.jena.datatypes.TypeMapper;
+import org.apache.jena.rdf.model.*;
 import org.locationtech.jts.geom.Geometry;
 import org.locationtech.jts.io.WKTWriter;
 
@@ -13,6 +13,7 @@ import static org.apache.jena.rdf.model.ResourceFactory.createProperty;
 
 public class WktConverter {
 
+	public static final String GEOSPARQL_URI = "http://www.opengis.net/ont/geosparql";
 	public static final Property GEOJSON_GEOMETRY = createProperty("https://purl.org/geojson/vocab#geometry");
 
 	private final GeometryExtractor geometryExtractor = new GeometryExtractor();
@@ -22,9 +23,16 @@ public class WktConverter {
 	 * Locates the geojson:geometry from the provided model and returns the WKT
 	 * translation
 	 */
-	public String getWktFromModel(Model model) {
+	public WktResult getWktFromModel(Model model) {
 		final Geometry geom = geometryExtractor.createGeometry(model, getGeometryId(model));
-		return writer.write(geom);
+		GeoType geoType = GeoType.fromName(geom.getGeometryType())
+				.orElseThrow(() -> new IllegalArgumentException("Geotype %s not supported".formatted(geom.getGeometryType())));
+		return new WktResult(geoType, writer.write(geom));
+	}
+
+	public Literal getWktLiteral(WktResult wktResult) {
+		RDFDatatype wktDataType = TypeMapper.getInstance().getSafeTypeByName(GEOSPARQL_URI + "#wktLiteral");
+		return ResourceFactory.createTypedLiteral(wktResult.wkt(),wktDataType);
 	}
 
 	private Resource getGeometryId(Model model) {
@@ -35,7 +43,7 @@ public class WktConverter {
 			throw new IllegalArgumentException("Ambiguous request: multiple geojson:geometry found.");
 		}
 
-		return geometryStatements.get(0);
+		return geometryStatements.getFirst();
 	}
 
 }
