@@ -1,5 +1,7 @@
 package be.vlaanderen.informatievlaanderen.ldes.ldi.processors;
 
+import com.github.tomakehurst.wiremock.client.WireMock;
+import com.github.tomakehurst.wiremock.junit5.WireMockTest;
 import org.apache.jena.rdf.model.RDFNode;
 import org.apache.jena.riot.Lang;
 import org.apache.jena.riot.RDFParser;
@@ -18,9 +20,6 @@ import org.testcontainers.containers.PostgreSQLContainer;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Stream;
-
-import com.github.tomakehurst.wiremock.client.WireMock;
-import com.github.tomakehurst.wiremock.junit5.WireMockTest;
 
 import static be.vlaanderen.informatievlaanderen.ldes.ldi.processors.config.LdesProcessorRelationships.DATA_RELATIONSHIP;
 import static com.github.tomakehurst.wiremock.client.WireMock.getRequestedFor;
@@ -93,7 +92,7 @@ class LdesClientProcessorTest {
 
 		assertEquals(1, dataFlowfiles.size());
 		List<RDFNode> result = RDFParser
-				.fromString(dataFlowfiles.get(0).getContent())
+				.fromString(dataFlowfiles.getFirst().getContent())
 				.lang(Lang.NQUADS)
 				.toModel()
 				.listObjectsOfProperty(createProperty(VERSION_OF))
@@ -101,11 +100,12 @@ class LdesClientProcessorTest {
 		assertEquals(1, result.size());
 	}
 
-	@Test
-	void shouldSupportRedirectLogic() {
+	@ParameterizedTest
+	@ArgumentsSource(StatePersistenceArgumentsProvider.class)
+	void shouldSupportRedirectLogic(Map<String, String> statePersistenceProps) {
 		testRunner.setProperty("AUTHORIZATION_STRATEGY", "NO_AUTH");
 		testRunner.setProperty("DATA_SOURCE_URLS", "http://localhost:10101/200-response-with-indirect-url");
-		testRunner.setProperty("STATE_PERSISTENCE_STRATEGY", "MEMORY");
+		statePersistenceProps.forEach(testRunner::setProperty);
 		testRunner.setProperty("KEEP_STATE", Boolean.FALSE.toString());
 		testRunner.setProperty("STREAM_TIMESTAMP_PATH_PROPERTY", Boolean.FALSE.toString());
 		testRunner.setProperty("STREAM_VERSION_OF_PROPERTY", Boolean.FALSE.toString());
@@ -118,14 +118,15 @@ class LdesClientProcessorTest {
 		assertEquals(1, dataFlowfiles.size());
 	}
 
-	@Test
-	void shouldBeAbleToEndGracefully() {
+	@ParameterizedTest
+	@ArgumentsSource(StatePersistenceArgumentsProvider.class)
+	void shouldBeAbleToEndGracefully(Map<String, String> statePersistenceProps) {
 		// This is an immutable fragment with 1 member and no relations. We reach the
 		// end of the ldes after 1 run.
 		testRunner.setProperty("DATA_SOURCE_URLS",
 				"http://localhost:10101/end-of-ldes?generatedAtTime=2022-05-03T00:00:00.000Z");
 		testRunner.setProperty("AUTHORIZATION_STRATEGY", "NO_AUTH");
-		testRunner.setProperty("STATE_PERSISTENCE_STRATEGY", "MEMORY");
+		statePersistenceProps.forEach(testRunner::setProperty);
 		testRunner.setProperty("KEEP_STATE", Boolean.FALSE.toString());
 		testRunner.setProperty("STREAM_TIMESTAMP_PATH_PROPERTY", Boolean.FALSE.toString());
 		testRunner.setProperty("STREAM_VERSION_OF_PROPERTY", Boolean.FALSE.toString());
@@ -154,10 +155,11 @@ class LdesClientProcessorTest {
 		assertEquals(6, dataFlowfiles.size());
 	}
 
-	@Test
-	void shouldSupportRetry() {
+	@ParameterizedTest
+	@ArgumentsSource(StatePersistenceArgumentsProvider.class)
+	void shouldSupportRetry(Map<String, String> statePersistenceProps) {
 		testRunner.setProperty("DATA_SOURCE_URLS", "http://localhost:10101/retry");
-		testRunner.setProperty("STATE_PERSISTENCE_STRATEGY", "MEMORY");
+		statePersistenceProps.forEach(testRunner::setProperty);
 		testRunner.setProperty("KEEP_STATE", Boolean.FALSE.toString());
 		testRunner.setProperty("RETRIES_ENABLED", Boolean.TRUE.toString());
 		testRunner.setProperty("MAX_RETRIES", "3");
@@ -172,13 +174,15 @@ class LdesClientProcessorTest {
 		assertEquals(6, dataFlowfiles.size());
 	}
 
-	@Test
-	void shouldSupportVersionMaterialisation() {
+	@ParameterizedTest
+	@ArgumentsSource(StatePersistenceArgumentsProvider.class)
+	void shouldSupportVersionMaterialisation(Map<String, String> statePersistenceProps) {
 		testRunner.setProperty("DATA_SOURCE_URLS",
 				"http://localhost:10101/exampleData?generatedAtTime=2022-05-03T00:00:00.000Z");
-		testRunner.setProperty("STATE_PERSISTENCE_STRATEGY", "MEMORY");
+		statePersistenceProps.forEach(testRunner::setProperty);
 		testRunner.setProperty("KEEP_STATE", Boolean.FALSE.toString());
 		testRunner.setProperty("USE_VERSION_MATERIALISATION", Boolean.TRUE.toString());
+		testRunner.setProperty("USE_LATEST_STATE_FILTER", Boolean.FALSE.toString());
 		testRunner.setProperty("RESTRICT_TO_MEMBERS", Boolean.FALSE.toString());
 		testRunner.setProperty("VERSION_OF_PROPERTY", VERSION_OF);
 
@@ -189,7 +193,7 @@ class LdesClientProcessorTest {
 		assertEquals(1, dataFlowfiles.size());
 
 		List<RDFNode> result = RDFParser
-				.fromString(dataFlowfiles.get(0).getContent())
+				.fromString(dataFlowfiles.getFirst().getContent())
 				.lang(Lang.NQUADS)
 				.toModel()
 				.listObjectsOfProperty(createProperty("http://purl.org/dc/terms/isVersionOf"))
@@ -208,7 +212,7 @@ class LdesClientProcessorTest {
 		List<MockFlowFile> dataFlowfiles = testRunner.getFlowFilesForRelationship(DATA_RELATIONSHIP);
 
 		assertEquals(1, dataFlowfiles.size());
-		MockFlowFile flowFile = dataFlowfiles.get(0);
+		MockFlowFile flowFile = dataFlowfiles.getFirst();
 		assertEquals("localhost:10101/exampleData/shape",
 				flowFile.getAttribute("ldes.shacleshapes"));
 		assertEquals("http://www.w3.org/ns/prov#generatedAtTime",
@@ -235,13 +239,67 @@ class LdesClientProcessorTest {
 				.isInstanceOf(AssertionFailedError.class)
 				.hasMessageStartingWith("Processor has 1 validation failures:");
 	}
-	@Test
-	void shouldSupportOnlyOnceFilter() {
-		testRunner.setProperty("DATA_SOURCE_URLS",
-				"http://localhost:10101/exampleData?generatedAtTime=2022-05-03T00:00:00.000Z");
-		testRunner.setProperty("STATE_PERSISTENCE_STRATEGY", "MEMORY");
+
+	@ParameterizedTest
+	@ArgumentsSource(StatePersistenceArgumentsProvider.class)
+	void shouldSupportOnlyOnceFilter(Map<String, String> statePersistenceProps) {
+		testRunner.setProperty("DATA_SOURCE_URLS", "http://localhost:10101/duplicate-members?pageNumber=1");
+		statePersistenceProps.forEach(testRunner::setProperty);
 		testRunner.setProperty("KEEP_STATE", Boolean.FALSE.toString());
 		testRunner.setProperty("USE_EXACTLY_ONCE_FILTER", Boolean.TRUE.toString());
+		testRunner.setProperty("RESTRICT_TO_MEMBERS", Boolean.FALSE.toString());
+		testRunner.setProperty("VERSION_OF_PROPERTY", VERSION_OF);
+
+		testRunner.run(4);
+
+		List<MockFlowFile> dataFlowfiles = testRunner.getFlowFilesForRelationship(DATA_RELATIONSHIP);
+
+		assertEquals(3, dataFlowfiles.size());
+
+		List<RDFNode> result = RDFParser
+				.fromString(dataFlowfiles.getFirst().getContent())
+				.lang(Lang.NQUADS)
+				.toModel()
+				.listObjectsOfProperty(createProperty("http://purl.org/dc/terms/isVersionOf"))
+				.toList();
+		assertEquals(1, result.size());
+	}
+
+	@ParameterizedTest
+	@ArgumentsSource(StatePersistenceArgumentsProvider.class)
+	void shouldSupportDisableOfOnlyOnceFilter(Map<String, String> statePersistenceProps) {
+		testRunner.setProperty("DATA_SOURCE_URLS", "http://localhost:10101/duplicate-members?pageNumber=1");
+		statePersistenceProps.forEach(testRunner::setProperty);
+		testRunner.setProperty("KEEP_STATE", Boolean.FALSE.toString());
+		testRunner.setProperty("USE_EXACTLY_ONCE_FILTER", Boolean.FALSE.toString());
+		testRunner.setProperty("RESTRICT_TO_MEMBERS", Boolean.FALSE.toString());
+		testRunner.setProperty("VERSION_OF_PROPERTY", VERSION_OF);
+
+		testRunner.run(4);
+
+		List<MockFlowFile> dataFlowfiles = testRunner.getFlowFilesForRelationship(DATA_RELATIONSHIP);
+
+		assertEquals(4, dataFlowfiles.size());
+
+		List<RDFNode> result = RDFParser
+				.fromString(dataFlowfiles.getFirst().getContent())
+				.lang(Lang.NQUADS)
+				.toModel()
+				.listObjectsOfProperty(createProperty("http://purl.org/dc/terms/isVersionOf"))
+				.toList();
+		assertEquals(1, result.size());
+	}
+
+	@ParameterizedTest
+	@ArgumentsSource(StatePersistenceArgumentsProvider.class)
+	void shouldSupportVersionMaterialisationWithLatestStateFilter(Map<String, String> statePersistenceProps) {
+		testRunner.setProperty("DATA_SOURCE_URLS",
+				"http://localhost:10101/exampleData?generatedAtTime=2022-05-03T00:00:00.000Z");
+		statePersistenceProps.forEach(testRunner::setProperty);
+		testRunner.setProperty("STATE_PERSISTENCE_STRATEGY", "MEMORY");
+		testRunner.setProperty("KEEP_STATE", Boolean.FALSE.toString());
+		testRunner.setProperty("USE_VERSION_MATERIALISATION", Boolean.TRUE.toString());
+		testRunner.setProperty("USE_LATEST_STATE_FILTER", Boolean.TRUE.toString());
 		testRunner.setProperty("RESTRICT_TO_MEMBERS", Boolean.FALSE.toString());
 		testRunner.setProperty("VERSION_OF_PROPERTY", VERSION_OF);
 
@@ -252,18 +310,20 @@ class LdesClientProcessorTest {
 		assertEquals(2, dataFlowfiles.size());
 
 		List<RDFNode> result = RDFParser
-				.fromString(dataFlowfiles.get(0).getContent())
+				.fromString(dataFlowfiles.getFirst().getContent())
 				.lang(Lang.NQUADS)
 				.toModel()
 				.listObjectsOfProperty(createProperty("http://purl.org/dc/terms/isVersionOf"))
 				.toList();
-		assertEquals(1, result.size());
+		assertEquals(0, result.size());
 	}
-	@Test
-	void shouldNotSupportOnlyOnceFilterWhenVersionMaterialiserIsActive() {
+
+	@ParameterizedTest
+	@ArgumentsSource(StatePersistenceArgumentsProvider.class)
+	void shouldNotSupportOnlyOnceFilterWhenVersionMaterialiserIsActive(Map<String, String> statePersistenceProps) {
 		testRunner.setProperty("DATA_SOURCE_URLS",
 				"http://localhost:10101/exampleData?generatedAtTime=2022-05-03T00:00:00.000Z");
-		testRunner.setProperty("STATE_PERSISTENCE_STRATEGY", "MEMORY");
+		statePersistenceProps.forEach(testRunner::setProperty);
 		testRunner.setProperty("KEEP_STATE", Boolean.FALSE.toString());
 		testRunner.setProperty("USE_VERSION_MATERIALISATION", Boolean.TRUE.toString());
 		testRunner.setProperty("USE_EXACTLY_ONCE_FILTER", Boolean.TRUE.toString());
@@ -277,7 +337,7 @@ class LdesClientProcessorTest {
 		assertEquals(1, dataFlowfiles.size());
 
 		List<RDFNode> result = RDFParser
-				.fromString(dataFlowfiles.get(0).getContent())
+				.fromString(dataFlowfiles.getFirst().getContent())
 				.lang(Lang.NQUADS)
 				.toModel()
 				.listObjectsOfProperty(createProperty("http://purl.org/dc/terms/isVersionOf"))
